add initial template customization

--- a/acrepo-template-mustache/src/main/resources/edu/amherst/acdc/template/mustache/template.mustache
+++ b/acrepo-template-mustache/src/main/resources/edu/amherst/acdc/template/mustache/template.mustache
@@ -1,1 +1,10 @@
-Hello Fedora {{body}}
+<!DOCTYPE html>
+<html lang="en" prefix="og: http://ogp.me/ns#">
+  <head>
+    <title>{{body.title}}</title>
+  </head>
+  <body>
+    <h1>Fedora Template Service: {{body.title}}</h1>
+    <p>{{body.description}}</p>
+  </body>
+</html>
