--- a/acrepo-exts-template/src/main/resources/edu/amherst/acdc/exts/template/template.mustache
+++ b/acrepo-exts-template/src/main/resources/edu/amherst/acdc/exts/template/template.mustache
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
-    <title>{{body.title}}</title>
+    {{#body.title}}
+    <title>{{.}}</title>
+    {{/body.title}}
   </head>
   <body>
-    <h1>Fedora Template Service: {{body.title}}</h1>
-    <p>{{body.description}}</p>
+    {{#body.title}}
+    <h1>Fedora Template Service: {{.}}</h1>
+    {{/body.title}}
+    {{#body.description}}
+    <p>{{.}}</p>
+    {{/body.description}}
   </body>
 </html>
