--- a/acrepo-exts-template/src/test/resources/edu/amherst/acdc/exts/template/template2.mustache
+++ b/acrepo-exts-template/src/test/resources/edu/amherst/acdc/exts/template/template2.mustache
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
-    <title>{{body.title}}</title>
+    {{#body.title}}
+    <title>{{.}}</title>
+    {{/body.title}}
   </head>
   <body>
-    <h1>Fedora Template Service: {{body.title}}</h1>
-    <h2>Custom Template: {{body.date}}</h2>
-    <p>{{body.description}}</p>
+    {{#body.title}}
+    <h1>Fedora Template Service: {{.}}</h1>
+    {{/body.title}}
+    {{#body.date}}
+    <h2>Custom Template: {{.}}</h2>
+    {{/body.date}}
+    {{#body.description}}
+    <p>{{.}}</p>
+    {{/body.description}}
   </body>
 </html>
